# minica

./: .gitattributes  Makefile.am  Makefile.in  README.md  acinclude.m4  configure  configure.ac  minica-cacert-import.pl.in  minica-cert-import.pl.in  minica-schema.sql  minica.8  minica.conf.example.in  minica.conf.in  minica.db.sample  minica.in  minica.pl.in  minica.pw.example  minica.pw.sample  minica.sql
drafts/: async.js  broker.pl  crl-gen.pl  daemon.pl  rsa.pl  ua-json.pl  ua.pl  ua2.pl  websocket-example.pl  websocket-example2.pl  websocket-example3.pl  websocket-example4.pl  websocket-example5.pl  ws_server.js
lib/: MicroCA.pm  MiniCA.pm.in
lib/MicroCA/Controller/: Main.pm
lib/MicroCA/Model/: CA.pm  Users.pm
lib/MiniCA/Controller/: Main.pm
lib/MiniCA/Model/: CA.pm  Users.pm
lib/Mojolicious/Plugin/: RenderFile.pm
ports/minica/: Makefile  distinfo  pkg-descr  pkg-plist
ports/minica/files/: pkg-install.in
ports/p5-Crypt-OpenSSL-CA/: Makefile
ports/p5-Crypt-OpenSSL-CA/files/: crl-check.pl  crldisplay.c  patch-x-lib-Crypt-OpenSSL-CA.pm
ports/p5-Crypt-OpenSSL-RSA/: Makefile
ports/p5-Crypt-OpenSSL-RSA/files/: patch-x-RSA.pm  patch-x-RSA.xs  patch-x-t-rsa.t
public/css/: app.css  app.scss  foundation.css  foundation.min.css  foundation.scss
public/css/settings/: _settings.scss
public/docs/: minica-arch.dia  minica-lifecicle1.dia  minica-lifecicle2.dia
public/js/: foundation.min.js
rc.d/: microca  microca.in
templates/: cacert-create.html.ep  cacert-delete-form.html.ep  cacert-delete.html.ep  cacert-download-form.html.ep  cacert-list.html.ep  cacert-revoke-form.html.ep  cacert-revoke.html.ep  cacert-show-form.html.ep  cacert-show.html.ep  cacert-unrevoke-form.html.ep  cacert-unrevoke.html.ep  cert-create.html.ep  cert-delete-form.html.ep  cert-delete.html.ep  cert-download-form.html.ep  cert-list-form.html.ep  cert-list.html.ep  cert-revoke-form.html.ep  cert-revoke.html.ep  cert-show-form.html.ep  cert-show.html.ep  cert-unrevoke-form.html.ep  cert-unrevoke.html.ep  crl-create.html.ep  crl-delete-form.html.ep  crl-delete.html.ep  crl-download-form.html.ep  crl-list-form.html.ep  crl-list.html.ep  crl-show-form.html.ep  crl-show.html.ep  debug.html.ep  doc.html.ep  exception.html.ep  exception.production.html.ep  login.html.ep  not_found.html.ep  not_found.production.html.ep  start.html.ep  user-chname-form.html.ep  (+7 more)
templates/layouts/: default.html.ep  login.html.ep
